fix(styles): :lipstick: fix header navigation overflow on mobile

--- a/src/styles/blocks/_nav.scss
+++ b/src/styles/blocks/_nav.scss
@@ -3,15 +3,16 @@
   box-shadow: 0 1px 0 get-color('black');
   font-weight: 400;
   line-height: 1;
-  padding: get-size('500') 0.5rem get-size('300');
+  padding: get-size('500') 0 get-size('300');
 
   &__list {
     align-items: center;
     display: flex;
     justify-content: space-between;
+    font-size: get-size('200');
 
-    li + li {
-      margin-left: get-size('300');
+    li {
+      flex: 0 1 auto;
     }
   }
 
@@ -23,8 +24,33 @@
     font-size: get-size('400');
   }
 
+  @include media-query('xs') {
+    &__list {
+      flex-wrap: wrap;
+      text-align: center;
+
+      li {
+        flex-basis: 50%;
+      }
+
+      li:nth-of-type(3),
+      li:nth-of-type(4) {
+        margin-top: 1rem;
+      }
+    }
+  }
+
   @include media-query('s') {
     box-shadow: unset;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+
+    &__list {
+      font-size: inherit;
+      li + li {
+        margin-left: get-size('300');
+      }
+    }
   }
 
   @media (orientation: landscape) {
